# cara-submission

./: .gitignore  README.md  cara.py  cara_audio_io.py  docker-compose.yml  jetson.py  serial_control.py  serial_control_arduino.py  servo_test.py  speech_config.json
arduino/: arduino.ino
arduino/a/: arduino.ino  gpio.py
cara_emotion_vla/: README.md  emotion_model.py
cara_emotion_vla/config/: emotion_mode.yaml
cara_emotion_vla/scripts/: benchmark_latency_desktop.py  benchmark_latency_jetson.py  compile_engine.py  crop_faces.py  eval_emotion_model.py  export_onnx.py  extract_frames.py  record_videos.py
cara_emotion_vla/vision/: camera_stream.py  face_detector.py
cara_memory/: cara_summarizer.py  good_things.json  profile.json
jetson/: Dockerfile  entrypoint.sh
ros2_ws/: README.md  cara_main.py  ost.yaml
ros2_ws/cara_memory/: cara_summarizer.py  good_things.json  profile.json
ros2_ws/src/cara_gaze_control/: package.xml  setup.py
ros2_ws/src/cara_gaze_control/cara_gaze_control/: __init__.py  face_id_center_bridge.py  gaze_debugger.py  model_gaze_mapper.py
ros2_ws/src/cara_gaze_control/resource/: cara_gaze_control
ros2_ws/src/cara_gaze_control/scripts/: face_id_center_bridge  gaze_debugger  model_gaze_mapper
ros2_ws/src/cara_vision_control/: package.xml  setup.cfg  setup.cfg.bak  setup.py
ros2_ws/src/cara_vision_control/cara_vision_control/: cara_emotion_core.py  cara_emotion_core_test.py  cara_emotion_node.py  cara_servo_pca9685_node.py  face_yunet_node.py
ros2_ws/src/face_id_ros/: .gitignore  README.md  main.cpp  package.xml  setup.py
ros2_ws/src/face_id_ros/config/: face_id_params.yaml  head.xml  head_dxl.yaml  params.yaml
ros2_ws/src/face_id_ros/include/face_id_ros/: detector.hpp  embedder.hpp  face_db.hpp
ros2_ws/src/face_id_ros/src/: detector.cpp  embedder.cpp  emotion.py  face_db.cpp  face_id_node.cpp  gaze_mapper.py
training/: Dockerfile
