<package format="3">
  <name>cara_gaze_control</name>
  <version>0.1.0</version>
  <description>Cara gaze controller node</description>
  <maintainer email="elida@example.com">Elida</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
