<?xml version="1.0"?>
<package format="3">
  <name>cara_vision_control</name>
  <version>0.1.0</version>
  <description>Cara AI Teddy Bear vision and head control nodes</description>
  <maintainer email="elida@example.com">Elida</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>face_id_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
