<?xml version="1.0"?>
<package format="3">
  <name>face_id_ros</name>
  <version>0.1.0</version>
  <description>Face ID service/node for ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
 
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>vision_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing (optional) -->
  <test_depend>ament_cmake_pytest</test_depend>

  <!-- Make sure launch files get installed as shared resources -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
 
